# qobuz-dl

./: pyproject.toml  requirements.txt
