[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
authors = [
  {name = "Pradyun Gedam", email = "pradyun@example.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License (GPL)",
]
dependencies = [
    "beautifulsoup4==4.12.3",
    "colorama==0.4.6",
    "mutagen==1.47.0",
    "pathvalidate==3.2.0",
    "pick==1.6.0",
    "requests==2.31.0",
    "tqdm==4.66.1",
]
description = "The complete Lossless and Hi-Res music downloader for Qobuz"
name = "qobuz-dl"
readme = "README.md"
requires-python = ">=3.8"
version = "0.9.9.10"

[project.scripts]
qobuz-dl = "qobuz_dl:main"
qdl = "qobuz_dl:main"

[project.urls]
homepage = "https://github.com/vitiko98/Qobuz-DL"
